...
                } footer: {
                    Text(footerText)
                        .frame(maxWidth: .infinity, alignment: .center)
                        .multilineTextAlignment(.center)
                }
            }
            .navigationTitle("Settings")
            .navigationDestination(for: Level.self) { level in
                WordListView(level: level)
            }
        }
    }

...
